      hyperlink, a progress bar, an icon and an owner drawn part.
   - A window menu has been added to the DockTabbedMDI sample.	 
   - The Themes sample demonstrates how to save a band's size and position 
      in the registry.
   

Changes in detail
-----------------
Added CFrame::DrawReBarBkgnd
Added CFrame::DrawStatusBarBkgnd
Added CDockContainer::OnMouseMove
Added CDockContainer::SetHideSingleTab
Added CDockContainer::SwapTabs
Added CDocker::GetViewRect
Added CWinApp::LoadImage
Modified CTabbedMDI::GetTab			returns CWnd*
Moved ::TintBitmap 					to CBitmap::TintBitmap
Moved ::GrayScaleBitmap 			to CBitmap::GrayScaleBitmap
Moved ::CreateDisabledImageList 	to CImageList::CreateDisabledImageList

Added user defined messages:
UWM_GETFRAMEVIEW:	Used by CFrame.  Returns the view window's HWND 
UWN_DRAWRBBKGND:    Used by CFrame.  Called for ReBar background redrawing
UWN_DRAWSBBKGND:    Used by CFrame.  Called for StatusBar background redrawing
UWN_TABDRAGGED:     Used by CTabbedMDI. Called when a CTab's tab is dragged

Added string resources for frames (defined in resouce.rc)
IDW_INDICATOR_CAPS
IDW_INDICATOR_NUM
IDW_INDICATOR_SCRL


Version 7.5.1
=============
Bug Fixes:
* Fixed memory leak in CDIObject
* Hand cursor is now displayed over hyperlink in DialogDemo sample
* Removed flicker for CMenuBar when run on Windows 98


Version 7.5
===========
Bug Fixes:
* The drop-down lists for combo boxes are now displayed correctly.
* Fix for ToolBars on Win95

New Features and Enhancements
-----------------------------
* Added CRichEdit. This class provides support for Rich Edit controls
* Updated the approach to using threads
   - CWinThread is used in place of CThread.
   - CWinApp now inherits from CWinThread.
   - GUI threads are now implemented without multiple inheritance. Refer to
     the Threads and DirectX samples for an example of how to create GUI
	 threads.
   - CWinThread provides a constructor to facilitate worker threads. This 