@@ -157,6 +157,9 @@ END
 STRINGTABLE
 BEGIN
     IDW_MAIN                "Scribble Application"
+	IDW_INDICATOR_CAPS      "CAP"
+    IDW_INDICATOR_NUM       "NUM"
+    IDW_INDICATOR_SCRL      "SCRL"	
     IDW_READY               "Ready"		
 END
 
